fixes for forms and formats
git-svn-id: svn://alcomputer/RunaWFE-4.x/trunk/projects/wfe@5199 999c22fd-c5eb-e245-b5be-d41808c6d2cd